# gaussian-splatting-docker

./: Dockerfile  docker-compose.yml  environment.yml  extractor.py  start.sh  train.py
SIBR_viewers/extlibs/CudaRasterizer/subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
SIBR_viewers/extlibs/imgui/imgui/: CMakeLists.txt  imconfig.h  imgui.h
SIBR_viewers/extlibs/imgui/imgui/examples/opengl3_example/: Makefile  imgui_impl_glfw_gl3.h
SIBR_viewers/extlibs/imgui/subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
SIBR_viewers/extlibs/mrf/mrf/: CMakeLists.txt  block.h  config.h  graph.h
SIBR_viewers/extlibs/mrf/subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
SIBR_viewers/extlibs/nanoflann/nanoflann/: CMakeLists.txt  nanoflann.hpp
SIBR_viewers/extlibs/nanoflann/subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
SIBR_viewers/extlibs/nativefiledialog/nativefiledialog/: CMakeLists.txt
SIBR_viewers/extlibs/nativefiledialog/subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
SIBR_viewers/extlibs/picojson/picojson/: CMakeLists.txt
SIBR_viewers/extlibs/picojson/subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
SIBR_viewers/extlibs/rapidxml/rapidxml/: CMakeLists.txt
SIBR_viewers/extlibs/rapidxml/subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
SIBR_viewers/extlibs/xatlas/subbuild/: CMakeCache.txt  Makefile  (+2 more)
SIBR_viewers/install/lib/: libxatlas.so.1.0
arguments/: __init__.py
scene/: __init__.py
(+33 files in other folders)
